--- a/style.css
+++ b/style.css
@@ -54,4 +54,19 @@ img,audio,video {
     font-size: x-large;
 }
 
+.box {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    background: red;
+    position: relative;
+    animation: mymove 5s;
+  
+}
+
+
+@keyframes mymove {
+   from {left: 0px;}
+   to {left: 200px;background-color: blue;}
+}
 
