--- a/style.css
+++ b/style.css
@@ -19,16 +19,23 @@ th,td {
     font-size: 1.5rem;
 }
 
+nav {
+    position: relative;
+}
 
-
-
-.navbar {
+nav.navbar {
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: black;
-    padding: 15px;
-}
+    color: white;
+    padding: 10px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+  }
 
 .navbar h1 {
     font-size:50px;
